# Red2Tg-Telegram-Bot

./: .env.template  .gitignore  Create_Desktop_Shortcut.ps1  DUPLICATE_FIX_SUMMARY.md  MULTI_COMMAND_FEATURES.md  README.md  README_ONE_CLICK.md  check_db.py  clear_redgifs.py  data.db-shm  data1.db  edit_env.py  main.py  pyproject.toml  run_bot.bat  run_bot.ps1  test_duplicates.py
